# Mac_AI_Onboarding_Toolkit

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  Brewfile  CLAUDE.md  LEARNING_GUIDE.md  README.md  compatibility_matrix.md
01_anthropic_sdk/: README.md  example.py  pyproject.toml
01_anthropic_sdk/tests/: test_example.py
02_google_adk/: README.md  example.py  pyproject.toml
02_google_adk/tests/: test_example.py
03_openai_sdk/: README.md  example.py  pyproject.toml
03_openai_sdk/tests/: test_example.py
04_openrouter/: README.md  example.py  pyproject.toml
04_openrouter/tests/: test_example.py
05_langchain/: README.md  example.py  pyproject.toml
05_langchain/tests/: test_example.py
06_langgraph/: README.md  example.py  pyproject.toml
06_langgraph/tests/: test_example.py
07_crewai/: README.md  example.py  pyproject.toml
07_crewai/tests/: test_example.py
08_chromadb_rag/: README.md  example.py  pyproject.toml
08_chromadb_rag/tests/: test_example.py
09_ollama_mlx_local/: README.md  example.py  pyproject.toml
09_ollama_mlx_local/tests/: test_example.py
10_structured_outputs/: README.md  example.py  pyproject.toml
10_structured_outputs/tests/: test_example.py
11_fastapi_serving/: README.md  api.bru  app.py  pyproject.toml
11_fastapi_serving/tests/: test_app.py
12_streamlit_gradio/: README.md  example.py  gradio_app.py  pyproject.toml  streamlit_app.py
12_streamlit_gradio/tests/: test_example.py
13_huggingface/: README.md  example.py  pyproject.toml
13_huggingface/tests/: test_example.py
14_mcp_servers/: README.md  example.py  pyproject.toml
14_mcp_servers/tests/: test_example.py
15_evals_testing/: README.md  example.py  pyproject.toml
15_evals_testing/tests/: test_evals.py
16_grok_xai/: README.md  example.py  pyproject.toml
16_grok_xai/tests/: test_example.py
17_azure_openai/: README.md  example.py  pyproject.toml
17_azure_openai/tests/: test_example.py
18_qwen_local/: README.md  example.py  pyproject.toml
18_qwen_local/tests/: test_example.py
