[project]
name = "01-anthropic-sdk"
version = "0.1.0"
description = "Minimal, runnable Anthropic (Claude) SDK reference: basic call, streaming, tool use."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.116.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
