[project]
name = "02-google-adk"
version = "0.1.0"
description = "Minimal Google ADK (Agent Development Kit) reference: basic agent + tool-use with Gemini."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-adk>=1.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
