[project]
name = "04-openrouter"
version = "0.1.0"
description = "Minimal OpenRouter reference: single key, multi-model A/B comparison."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
