[project]
name = "07-crewai"
version = "0.1.0"
description = "Minimal CrewAI reference: Researcher + Writer crew, sequential tasks."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai[anthropic]>=0.80.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
