[project]
name = "08-chromadb-rag"
version = "0.1.0"
description = "Minimal ChromaDB RAG reference: embed, retrieve, and LLM-answer with local embeddings."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=0.5.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
