[project]
name = "11-fastapi-serving"
version = "0.1.0"
description = "Serve an LLM as a REST API with FastAPI + streaming SSE"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
