[project]
name = "12-streamlit-gradio"
version = "0.1.0"
description = "Quick chat UIs: Streamlit data app and Gradio chat interface"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.116.0",
    "gradio>=6.19.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
