[project]
name = "13-huggingface"
version = "0.1.0"
description = "HuggingFace Hub Inference API + model discovery (HF_TOKEN)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.22.0",
    "python-dotenv>=1.2.2",
    "transformers>=5.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
