[project]
name = "17-azure-openai"
version = "0.1.0"
description = "Azure OpenAI via AzureOpenAI client (enterprise endpoint + api_version)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
