[project]
name = "18-qwen-local"
version = "0.1.0"
description = "Qwen local models via ollama Python client (native API, not OpenAI shim)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
